--- a/demo-base/pom.xml
+++ b/demo-base/pom.xml
@@ -476,7 +476,12 @@
 		<artifactId>spring-session</artifactId>
 	</dependency>
 
-     
+	<!-- disruptor -->
+	<dependency>
+	    <groupId>com.lmax</groupId>
+	    <artifactId>disruptor</artifactId>
+	    <version>3.3.7</version>
+	</dependency>     
 			
 	<!-- commons -->
 	<dependency>
