--- a/demo-oc/demo-oc-im/pom.xml
+++ b/demo-oc/demo-oc-im/pom.xml
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>com.learn.oc</groupId>
+    <artifactId>demo-oc</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+  </parent>
   
-  <groupId>com.learn.oc</groupId>
-  <artifactId>demo-oc</artifactId>
+  
+  <groupId>org.demo.oc.im</groupId>
+  <artifactId>demo-oc-im</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>demo-oc</name>
-  <url>http://maven.apache.org</url>
   <packaging>pom</packaging>
-
   
+  <name>demo-oc-im</name>
+  <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-  
-  
-  
   <dependencies>
   </dependencies>
   <modules>
-    <module>demo-oc-im</module>
+    <module>demo-oc-im-common</module>
   </modules>
 </project>
