--- a/demo-oc/oc-server/demo-oc-server-boot/pom.xml
+++ b/demo-oc/oc-server/demo-oc-server-boot/pom.xml
@@ -1,28 +1,24 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-
-	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.0.RELEASE</version>
-	</parent>
-
-	<groupId>org.demo.oc.server.boot</groupId>
-	<artifactId>oc-server</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<packaging>pom</packaging>
-
-	<name>oc-server</name>
-
-
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.8</java.version>
-		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
-	</properties>
-
-	<dependencies>
+<?xml version="1.0"?>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.demo.oc.server.boot</groupId>
+    <artifactId>oc-server</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+  </parent>
+  <groupId>org.demo.oc.server.boot</groupId>
+  <artifactId>demo-oc-server-boot</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+  <name>demo-oc-server-boot</name>
+  <url>http://maven.apache.org</url>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+  
+  
+  
+  <dependencies>
 
 		<dependency>
 			<groupId>com.oc</groupId>
@@ -144,8 +140,4 @@
 		</dependency>
 	</dependencies>
 
-	 <modules>
-    <mod>
-ule>demo-oc-server-boot</module>
-  </modules>
 </project>
