--- a/demo-dfs/dfs-common/pom.xml
+++ b/demo-dfs/dfs-common/pom.xml
@@ -20,6 +20,7 @@
   
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <os.detected.classifier>windows-x86_64</os.detected.classifier>
   </properties>
 
 
