--- a/demo-dfs/dfs-common/pom.xml
+++ b/demo-dfs/dfs-common/pom.xml
@@ -19,6 +19,10 @@
   
   
   <properties>
+    <java.version>1.8</java.version>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <os.detected.classifier>windows-x86_64</os.detected.classifier>
   </properties>
@@ -131,6 +135,8 @@
                 <configuration>
                     <protocArtifact>com.google.protobuf:protoc:${protobuf.version}:exe:${os.detected.classifier}
                     </protocArtifact>
+                    <!-- <pluginId>grpc-java</pluginId>		//此参数在使用grpc的时候才需要
+        			<pluginArtifact>io.grpc:protoc-gen-grpc-java:1.17.1:exe:${os.detected.classifier}</pluginArtifact> -->
                 </configuration>
                 <executions>
                     <execution>
