--- a/demo-dfs/pom.xml
+++ b/demo-dfs/pom.xml
@@ -174,6 +174,16 @@
                 distributionManagement element or in -DaltDeploymentRepository=id::layout::url parameter-->
                 <version>2.8.2</version>
             </plugin>
+            
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
