--- a/demo-dfs/dfs-common/pom.xml
+++ b/demo-dfs/dfs-common/pom.xml
@@ -140,14 +140,15 @@
                 <configuration>
                     <protocArtifact>com.google.protobuf:protoc:${protobuf.version}:exe:${os.detected.classifier}
                     </protocArtifact>
-                    <!-- <pluginId>grpc-java</pluginId>		//此参数在使用grpc的时候才需要
-        			<pluginArtifact>io.grpc:protoc-gen-grpc-java:1.17.1:exe:${os.detected.classifier}</pluginArtifact> -->
+                    <pluginId>grpc-java</pluginId>	
+        			<pluginArtifact>io.grpc:protoc-gen-grpc-java:1.24.0:exe:${os.detected.classifier}</pluginArtifact>
                 </configuration>
                 <executions>
                     <execution>
                         <goals>
                             <goal>compile</goal>
                             <!--此参数在使用grpc的时候才需要<goal>compile-custom</goal>-->
+                            <goal>compile-custom</goal>
                         </goals>
                     </execution>
                 </executions>
