--- a/demo-dfs/dfs-rpc/pom.xml
+++ b/demo-dfs/dfs-rpc/pom.xml
@@ -18,6 +18,7 @@
   
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <os.detected.classifier>windows-x86_64</os.detected.classifier>
   </properties>
   
   
@@ -25,7 +26,6 @@
 	<dependency>
 		<groupId>com.google.protobuf</groupId>
 		<artifactId>protobuf-java</artifactId>
-		<version>3.1.0</version>
 	</dependency>  
   
 	<dependency>
