--- a/demo-dfs/dfs-rpc/pom.xml
+++ b/demo-dfs/dfs-rpc/pom.xml
@@ -27,6 +27,11 @@
 		<groupId>com.google.protobuf</groupId>
 		<artifactId>protobuf-java</artifactId>
 	</dependency>  
+	
+	<dependency>
+       <groupId>com.googlecode.protobuf-java-format</groupId>
+       <artifactId>protobuf-java-format</artifactId>
+    </dependency>
   
 	<dependency>
 		<groupId>io.grpc</groupId>
