--- a/demo-dfs/dfs-client/pom.xml
+++ b/demo-dfs/dfs-client/pom.xml
@@ -7,20 +7,24 @@
     <artifactId>demo-dfs</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
+  
+  
   <groupId>com.learn.dfs.client</groupId>
   <artifactId>dfs-client</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>dfs-client</name>
   <url>http://maven.apache.org</url>
+  
+  
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  
+  
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+        <dependency>
+		  <groupId>com.demo.dfs.rpc</groupId>
+		  <artifactId>dfs-rpc</artifactId>
+        </dependency>   
   </dependencies>
 </project>
