基于grpc实现editslog同步机制的代码

--- a/demo-dfs/pom.xml
+++ b/demo-dfs/pom.xml
@@ -20,6 +20,7 @@
     <module>demo-juc</module>
     <module>demo-register-server</module>
     <module>demo-register-client</module>
+    <module>dfs-backupnode</module>
   </modules>
 	
 	  
