--- a/demo-base/pom.xml
+++ b/demo-base/pom.xml
@@ -691,9 +691,21 @@
             <groupId>org.springframework.integration</groupId>
             <artifactId>spring-integration-core</artifactId>
             <version>4.3.21.RELEASE</version>
-        </dependency>                             	
+        </dependency>     
+                        	
+        <!-- ########################jdk version######################## -->
+		<!-- <dependency>
+			<groupId>jdk.tools</groupId>
+			<artifactId>jdk.tools</artifactId>
+			<version>1.8</version>
+			<scope>system</scope>
+			<systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
+		</dependency> -->
   </dependencies>
   
   
-
+  
+  <build>
+    <finalName>demo-base</finalName>
+  </build>
 </project>
