--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,16 @@
   
   <build>
     <finalName>yzh-learn</finalName>
+    <!-- springboot -->
+  	<!-- Package as an executable jar -->
+	<pluginManagement>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</pluginManagement>
   </build>
   
    <repositories>
@@ -41,15 +51,15 @@
     
       <profiles>
 	  	<profile>
-		    <id>jdk-1.7</id>
+		    <id>jdk-1.8</id>
 		    <activation>
 		        <activeByDefault>true</activeByDefault>
-		        <jdk>1.7</jdk>
+		        <jdk>1.8</jdk>
 		    </activation>
 		    <properties>
-		        <maven.compiler.source>1.7</maven.compiler.source>
-		        <maven.compiler.target>1.7</maven.compiler.target>
-		        <maven.compiler.compilerVersion>1.7</maven.compiler.compilerVersion>
+		        <maven.compiler.source>1.8</maven.compiler.source>
+		        <maven.compiler.target>1.8</maven.compiler.target>
+		        <maven.compiler.compilerVersion>1.8</maven.compiler.compilerVersion>
 		    </properties>
 		</profile> 
 	  </profiles>
@@ -692,13 +702,5 @@
   </dependencies>
   </dependencyManagement>
   
-    <!-- springboot -->
-  	<!-- Package as an executable jar -->
-	<plugins>
-		<plugin>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-maven-plugin</artifactId>
-		</plugin>
-	</plugins>
-  
+
 </project>
