--- a/demo-im/demo-im-sdk-android/pom.xml
+++ b/demo-im/demo-im-sdk-android/pom.xml
@@ -4,43 +4,23 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.learn.parent</groupId>
-    <artifactId>yzh-learn</artifactId>
+    <artifactId>demo-im</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  
-  
   <groupId>com.learn.parent</groupId>
-  <artifactId>demo-im</artifactId>
+  <artifactId>demo-im-sdk-android</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <name>demo-im</name>
+  <name>demo-im-sdk-android</name>
   <url>http://maven.apache.org</url>
-  
-  
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-  
-  
-  <modules>
-  	<module>demo-im-gateway-tcp</module>
-  	<module>demo-im-sdk-android</module>
-  </modules>  
-  
-  
-    <dependencies>
-        <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
-        </dependency>
-        
-	    <dependency>
-	      <groupId>junit</groupId>
-	      <artifactId>junit</artifactId>
-	      <scope>test</scope>
-	    </dependency>        
-    </dependencies>
-    
-    
-
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 </project>
